Bug 269063 - settings do not display style
Summary: settings do not display style
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-21 17:26 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
missing style and variants lists (145.35 KB, image/png)
2011-03-21 17:26 UTC, Alin M Elena
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-03-21 17:26:57 UTC
Created attachment 58214 [details]
missing style and variants lists

Version:           svn-playground (using Devel) 
OS:                Linux

settings-> configure chat handler
 do not display style and variants lists.

Alin

Reproducible: Didn't try
Comment 1 David Edmundson 2011-03-28 17:46:25 UTC
Git commit c6d2e30f24a3aee0d5185bd255e57d4def7355e9 by David Edmundson.
Committed on 28/03/2011 at 17:47.
Pushed by davidedmundson into branch 'master'.

Add previously commented out code which fetches the list of styles from the style-manager.

BUG:269063

M  +1    -1    config/main-window.cpp     

http://commits.kde.org/telepathy-chat-handler/c6d2e30f24a3aee0d5185bd255e57d4def7355e9