Add previously commented out code which fetches the list of styles from the style-manager.

BUG:269063